# POO

./: guess.cc  namespace
2022/p0/: guess
2022/p2/: person_main
2022/p4/marketplace/tests/: CMakeLists.txt
2022/p6/marketplace/src/market/: CMakeLists.txt  market.cc
2022/p6/marketplace/tests/: CMakeLists.txt  client_test.cc
2023/p7/contador/: Makefile  contador.cc  contador.h
2023/p7/marketplace/tests/: CMakeLists.txt
2023/p8/: Makefile  contador.cc  contador.h
POO/marketplace/: CMakeLists.txt
POO/marketplace/src/: CMakeLists.txt
POO/marketplace/src/app/: CMakeLists.txt  app_main.cc
POO/marketplace/src/basket/: CMakeLists.txt  basket.cc  basket.h  basket_main.cc
POO/marketplace/src/client/: CMakeLists.txt  basket.h  client.cc  client.h  client_main.cc
POO/marketplace/src/computer/: CMakeLists.txt  computer.h
POO/marketplace/src/market/: CMakeLists.txt  market.cc  market.h  market_main.cc
POO/marketplace/src/person/: CMakeLists.txt
POO/marketplace/src/product/: CMakeLists.txt  product.cc  product.h  product_main.cc
POO/marketplace/src/seller/: CMakeLists.txt  seller.cc  seller.h  seller_main.cc
POO/marketplace/src/tv/: CMakeLists.txt  tv.cc  tv.h  tv_main.cc
POO/marketplace/tests/: CMakeLists.txt  basket_test2.cc  client_test.cc  computer_test.cc  market_test.cc  person_test.cc  product_test.cc  seller_test.cc  tv_test.cc
POO/p7/: contador.cc  contador.h  contador_main.cc
p5/marketplace/tests/: CMakeLists.txt
p7/marketplace/: CMakeLists.txt
p7/marketplace/tests/: CMakeLists.txt
pruebas/: namespace.cc
(+53 files in other folders)
